[package]
name = "can_aerospace_lite"
authors = ["Talha Can Havadar <talhahavadar@hotmail.com>"]
description = "A lite version of CAN Aerospace Implementation according to 'Interface specification for airborne CAN applications V 1.7'"
keywords = ["canbus", "aerospace", "embedded"]
categories = ["embedded", "network-programming"]
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/Badger-Embedded/CANaerospace-Lite"
license = "LGPL-3.0-only"
repository = "https://github.com/Badger-Embedded/CANaerospace-Lite"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
heapless = "0.7.4"

[dependencies.bxcan]
version = ">=0.4, <0.6"
optional = true

[dev-dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
cortex-m-rtic = "0.5"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
socketcan = "1.7.0"

[features]
bxcan-support = ["bxcan"]

[[example]]
name = "hello"

[[example]]
name = "linux"
